--- a/draft/alexpub.tex
+++ b/draft/alexpub.tex
@@ -17,7 +17,7 @@
  
 % Full title of the paper (Capitalized)
 % \Title{Effect of Nanovoid on Fracture Process of Two-Phase $\gamma$($\rm TiAl$)+$\alpha_2$($\rm Ti_3Al$) Alloy}
-\Title{Atomic Investigation on Cold Deformation Behavior of Two Phase TiAl Polycrystalline with and without Void Defect}
+\Title{Atomic Investigation on Cold Deformation Behavior of Two Phase TiAl Polycrystal with and without Void Defect}
 % Author Orchid ID: enter ID or remove command
 \newcommand{\orcidauthorA}{0000-0001-8385-4439} % Add \orcidA{} behind the author's name
 \newcommand{\orcidauthorB}{0000-0002-9582-6301} % Add \orcidB{} behind the author's name
@@ -60,12 +60,12 @@ $^{2}$ \quad State Key Laboratory of Advanced Processing and Recycling of Non-fe
 % and brittle rapture failure 
 Poor Ductility at room temperature in Ti-Al alloy strongly affects the safety of fracture of structure like turbo of aircraft engine and combustion generator \cite{Munz2017}. Deformation phenomena of TiAl alloys have been widely studied in order to overcome the problems associated with the limited ductility and damage tolerance.  Much of the work has been performed on single phase $\gamma$ alloys and PST crystals\cite{Appel2016}. Rapture failure at the macroscopic scale can be attributed to nucleation, growth and propagation of cracks, but at the microscopic scale cracks are initially easily formed at defects in the casting process, such as voids and inclusions \cite{Tang2014}. 
 
-A great number of literature covers a wide range of parameters such as alloy composition, microstructure and deformation temperature. Two-phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\gamma$($\rm Ti_3Al$) alloy \cite{Kim1995}. Due to difficulties in observing the dynamic process during deformation wit expeiments, MD simulation has become a effective method to investigate micro deformation mechanism. Defects such as grain boundary, void and segregation plays an significant role in the process of fracture \cite{Larsen2016}. Multiscale method have been applied to study deformation behavior polycrystalline with single aluminum element \cite{Groh2009} and single titanium element \cite{Liu2018}. It's necessary to carefully examine the revolution of defects and its influence on the fracture process at atomic scale. 
+A great number of literature covers a wide range of parameters such as alloy composition, microstructure and deformation temperature. Two-phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\gamma$($\rm Ti_3Al$) alloy \cite{Kim1995}. Due to difficulties in observing the dynamic process during deformation wit experiments, MD simulation has become a effective method to investigate micro deformation mechanism. Defects such as grain boundary, void and segregation plays an significant role in the process of fracture \cite{Larsen2016}. Multiscale method have been applied to study deformation behavior polycrystal with single aluminum element \cite{Groh2009} and single titanium element \cite{Liu2018}. It's necessary to carefully examine the revolution of defects and its influence on the fracture process at atomic scale. 
 
-The initiation of crack at microscopic scale is a dynamic process, which resulting in difficulties on study of detailed mechanisms of deformation and cracking. These defects are known to play a fundamental role in the deformation of the material. It has been known that nucleation, growth and coalescence of voids are deemed as the primary mechanism of ductile material fracture, in which void growth is particularly important \cite{Hempel2017a}. Therefore, it is necessary to study the deformation response of intermetallic structural materials with the consideration of microstructure evolution. The effect of void defect is another great concern about properties of deformation mechanism about of TiAl alloy. A previous study on void growth in $\gamma$-TiAl single crystal has reveals that void with high volume fraction detracts yield strength, and emission of dislocation \cite{Tang2014, Xu2011}. Evolution of void in ductile polycrystalline was studied in nanoscale with molecular dynamics(MD) simulations. \cite{Jing2018a,Elkhateeb2018}. The deformation and fracture mechanisms in the duplex microstructure are plasticity induced grain boundary decohesion and cleavage, while those in the lamellar micro-structure are interface delamination and cracking across the lamellar \cite{Tang2014}. It has reveals that existence of voids alone may contribute to strain hardening because theyare barriers to dislocation movement \cite{Xiong2015}. However, few literatures covers about deformation mechanism of two phase TiAl alloy and the role of void in atomic scale. Defects are inevitable as micro-pores and loosen from casting, and in the actual work environment with radiation. A lot work carried out on the the effect of various defects on the behavior of different materials, show that point defects may affect the properties of materials greatly. The mechanical properties of irradiated copper is affected by the interaction between irradiation and dislocation \cite{Kiener2011}. Vacancy concentration in single crystal and polycrystal Fe–40 at. Al bulk results in an increase of strength \cite{Yang1998}. Ti-Al alloy is a type of typical brittle material, thus it can be assumed that its properties are seneitive to the existence of void defect. Surface defect such as small notches can caused lower high ccle fatigue strength of the Ti–47Al–2W–0.5Si alloy \cite{Nazmy2001}, and the strength of single crystal $\gamma$ - TiAl is also also lowered by point defect \cite{Wu2016}. The resistance of Ti–6Al–4V alloy, which was processed for typical fan blade applications, to high-cycle fatigue in the presence of foreign- object damage was markedly reduced due to earlier crack initiation.  The nucleation and subsequent near-threshold growth of crack was primarily affected by the stress concentration associated with the foreign-object damage and the presence of small micro-cracks in the damaged zone.
+The initiation of crack at microscopic scale is a dynamic process, which resulting in difficulties on study of detailed mechanisms of deformation and cracking. These defects are known to play a fundamental role in the deformation of the material. It has been known that nucleation, growth and coalescence of voids are deemed as the primary mechanism of ductile material fracture, in which void growth is particularly important \cite{Hempel2017a}. Therefore, it is necessary to study the deformation response of intermetallics structural materials with the consideration of microstructure evolution. The effect of void defect is another great concern about properties of deformation mechanism about of TiAl alloy. A previous study on void growth in $\gamma$-TiAl single crystal has reveals that void with high volume fraction detracts yield strength, and emission of dislocation \cite{Tang2014, Xu2011}. Evolution of void in ductile polycrystalline was studied in nanoscale with molecular dynamics(MD) simulations. \cite{Jing2018a,Elkhateeb2018}. The deformation and fracture mechanisms in the duplex microstructure are plasticity induced grain boundary decohesion and cleavage, while those in the lamellar micro-structure are interface delamination and cracking across the lamellar \cite{Tang2014}. It has reveals that existence of voids alone may contribute to strain hardening because they are barriers to dislocation movement \cite{Xiong2015}. However, few literatures covers about deformation mechanism of two phase TiAl alloy and the role of void in atomic scale. Defects are inevitable as micro-pores and loosen from casting, and in the actual work environment with radiation. A lot work carried out on the the effect of various defects on the behavior of different materials, show that point defects may affect the properties of materials greatly. The mechanical properties of irradiated copper is affected by the interaction between irradiation and dislocation \cite{Kiener2011}. Vacancy concentration in single crystal and polycrystal Fe–40 at. Al bulk results in an increase of strength \cite{Yang1998}. Ti-Al alloy is a type of typical brittle material, thus it can be assumed that its properties are sensitive to the existence of void defect. Surface defect such as small notches can caused lower high cycle fatigue strength of the Ti–47Al–2W–0.5Si alloy \cite{Nazmy2001}, and the strength of single crystal $\gamma$ - TiAl is also also lowered by point defect \cite{Wu2016}. The resistance of Ti–6Al–4V alloy, which was processed for typical fan blade applications, to high-cycle fatigue in the presence of foreign- object damage was markedly reduced due to earlier crack initiation.  The nucleation and subsequent near-threshold growth of crack was primarily affected by the stress concentration associated with the foreign-object damage and the presence of small micro-cracks in the damaged zone.
 
 
-This paper focus on the evolution of microstructure, tend to find out the connection between microstructure and cold deformation behaviour of two phase TiAl alloy. MD simulaiton including model creation and analysis method is given in Section \ref{section:method}; Results and discussion are in Section \ref{section:RD}.
+This paper focus on the evolution of microstructure, tend to find out the connection between microstructure and cold deformation behavior of two phase TiAl alloy. MD simulation including model creation and analysis method is given in Section \ref{section:method}; Results and discussion are in Section \ref{section:RD}.
 
 \section{Molecular Dynamics Simulation }\label{section:method}
 \subsection{Atomic Potential}
@@ -110,18 +110,18 @@ $\gamma $ TiAl has a fcc-centered tetragonal with an $L1_0$ structure, and $\alp
 In order to study the deformation mechanism of the two phase alloy and the effect of void defect, three types of models were created: Type-1.model without any void defect; Type-2. models with different size void inside $\alpha_2$ phase; Type-3. models with void at $\alpha_2-\gamma$ interface. 
 \ref{tab:lattice_parameter}. The simulation cells of two phase polycrystalline with an initially spherical void at different position are shown in figure . 
 Periodic boundary conditions (PBC) are applied along all three directions, that makes poly crystal with periodic nanovoid structures. The initial dimension of simulation cell is $L_x =200$ \si{\angstrom}, $L_y = $180\si{\angstrom}, $L_z = 210$ \si{\angstrom}, and each model contains about 4.6 million atoms. The grain orientation and size were randomly created with Voronoi method with code ATOMSK \cite{Hirel2015}, and resulting in the arbitrary shape and orientation of the grains.
-Unixial load was applied to the model at a strain rate of $5\times10^8\ \rm{s}^{-1}$.
+Uniaxial load was applied to the model at a strain rate of $5\times10^8\ \rm{s}^{-1}$.
  
 
 	
 \subsection{Analysis method}
-In order to identify typical defects in the deformed model, a hybrid analysis method was used with free code ovito\cite{Stukowski2010a}.Dislocation is visualized by DXA method, and Centrossymmetry parameter(CSP) is used to tell grain boundary from  $\alpha_2$ phase and $\gamma$ phase. The definition of CSP is as following:
+In order to identify typical defects in the deformed model, a hybrid analysis method was used with free code ovito\cite{Stukowski2010a}.Dislocation is visualized by DXA method, and Centro-symmetry parameter(CSP) is used to tell grain boundary from  $\alpha_2$ phase and $\gamma$ phase. The definition of CSP is as following:
 
 	\begin{equation} \label{eq:csp} 
 	P = \displaystyle\sum_{i=1}^{6}|\vec{R_i}+{\vec{R}}_{i+6}|^2
 	\end{equation}
 	
-where $\vec{R_i}$ and ${\vec{R}}_{i+6}$ are the vectors corresponding to the six pairs of opposite nearest neighbors in the fcc lattice. The centrosymmetry parameter(CSP) is zero for atoms in a perfect lattice. In other words, if the lattice is distorted the value of P will not be zero. Instead, the parameter will have a value within the range corresponding to a particular defect. By removing all the perfect and surface atoms within the bulk, the existence of dislocation atoms become visible. 
+where $\vec{R_i}$ and ${\vec{R}}_{i+6}$ are the vectors corresponding to the six pairs of opposite nearest neighbors in the fcc lattice. The centro-symmetry parameter(CSP) is zero for atoms in a perfect lattice. In other words, if the lattice is distorted the value of P will not be zero. Instead, the parameter will have a value within the range corresponding to a particular defect. By removing all the perfect and surface atoms within the bulk, the existence of dislocation atoms become visible. 
  
 \section{Results and Discussion}\label{section:RD}
 
@@ -134,11 +134,11 @@ where $\vec{R_i}$ and ${\vec{R}}_{i+6}$ are the vectors corresponding to the six
 
 
 %	/home/alex/Documents/violet/draft/img/perfect-line.pdf
-Deformation process of the model witout void defect is shown in Fig. \ref{fig:deformation-pf}. The streng of the model without void defect is 5.3 Gpa. According to stress response under constan rate of strain rate, the whole tensile process can be divided into four stages: 
-Stage - \uppercase\expandafter{\romannumeral1}: elasetic stage,ranging from $\epsilon = 0$ to $\epsilon = 0.092$, including key point 1;
+Deformation process of the model without void defect is shown in Fig. \ref{fig:deformation-pf}. The strength of the model without void defect is 5.3 GPa. According to stress response under constant rate of strain rate, the whole tensile process can be divided into four stages: 
+Stage - \uppercase\expandafter{\romannumeral1}: elastic stage,ranging from $\epsilon = 0$ to $\epsilon = 0.092$, including key point 1;
 Stage - \uppercase\expandafter{\romannumeral2}: yield stage, ranging from $\epsilon = 0.092$ to $\epsilon = 0.101$, including key points 2 to 6;
 Stage - \uppercase\expandafter{\romannumeral3}: cracking stage, ranging from $\epsilon = 0.101$ to $\epsilon = 0.112$, including key pint 7 to 10;
-Stage - \uppercase\expandafter{\romannumeral4}: fracture stage. Following discussion concentrates on deformation phenomena that rely on the elastoplastic co-deformation of the $\gamma$ and $\alpha_2$ phases and on the particular point defect situation occurring in two phase alloys. 
+Stage - \uppercase\expandafter{\romannumeral4}: fracture stage. Following discussion concentrates on deformation phenomena that rely on the elastro-plastic codeformation of the $\gamma$ and $\alpha_2$ phases and on the particular point defect situation occurring in two phase alloys. 
 
 \begin{table}[ht]
 	\caption{Key point during tensile process}
@@ -170,14 +170,14 @@ Stage - \uppercase\expandafter{\romannumeral4}: fracture stage. Following discus
 \begin{figure}[ht] 
 	\centering
 	\includegraphics[width=1\linewidth]{img/def2}
-	\caption{Microstrucutre evolution inside $\gamma$ phase(a), $\alpha_2$ phase(b) at key point 1 to 10}
+	\caption{Microstructure evolution inside $\gamma$ phase(a), $\alpha_2$ phase(b) at key point 1 to 10}
 	\label{fig:Defect}
 \end{figure}
 
-Deformation process of model without void under uniaxial load is shown by stress-strain curve Fig. \ref{fig:deformation-pf} and snapshots of atom configuration at the 10 key points in Fig. \ref{fig:Defect}.  Atoms with ordered orientation  of $\gamma$ phase grains have been removed in Fig.\ref{fig:Defect}a,\ $\alpha_2$ phase and defects inside grains have been left. Similarly, $\gamma$ phase grain have been removed in Fig. \ref{fig:Defect}b, the defect of $\alpha_2$ phase has been left.  
+Deformation process of model without void under uniaxial load is shown by stress-strain curve Fig. \ref{fig:deformation-pf} and snapshots of atom configuration at the 10 key points in Fig. \ref{fig:Defect}.  Atoms with ordered orientation  of $\gamma$ phase grains have been removed in Fig.\ref{fig:Defect}a,\ $\alpha_2$ phase and defects inside grains have been left. Similarly, $\gamma$ phase grain have been removed in Fig. \ref{fig:Defect}b, the defects of $\alpha_2$ phase have been left.  
 
 
-The results show that, at elastic stage(stage\uppercase\expandafter{\romannumeral1}), the structure of model have little change but the size of simulation box enlarged due to the loading, the deformation of the two phase are compatible. Emission of dislocation and evolution of defects initiated at the end of elastic stage (key point 2). A  great number of dislocation emitted inside $\gamma$ phase stage 2, however, the dislocation inside $\gamma$ phase was emitted after key point 6 in Fig. \ref{fig:Defect}b. The deformation of $\alpha_2$ phase is even more earlier than $\gamma$ phase druing yied stage, thus local displacement of two phase are incompatible during yield stage.  $\gamma$ phase (TiAl) deforms by octahedral glide of ordinary dislocations with the Burgers vector b=1/2[110] and super dislocations with the Burgers vectors $b=[101]$ and $b=1/2[11\overline{2}]$. The other potential deformation mode is mechanical twinning have been repored along $1/6[11\overline{2}]{111}$, have not been observed in the simulation because of room temperature cannot offer enough energy for dislocation nucleation.
+The results show that, at elastic stage(stage\uppercase\expandafter{\romannumeral1}), the structure of model have little change but the size of simulation box enlarged due to the loading, the deformation of the two phase are compatible. Emission of dislocation and evolution of defects initiated at the end of elastic stage (key point 2). A  great number of dislocation emitted inside $\gamma$ phase stage 2, however, the dislocation inside $\gamma$ phase was emitted after key point 6 in Fig. \ref{fig:Defect}b. The deformation of $\alpha_2$ phase is even more earlier than $\gamma$ phase during yield stage, thus local displacement of two phase are incompatible during yield stage.  $\gamma$ phase (TiAl) deforms by octahedral glide of ordinary dislocations with the Burgers vector b=1/2[110] and super dislocations with the Burgers vectors $b=[101]$ and $b=1/2[11\overline{2}]$. The other potential deformation mode is mechanical twinning have been reported along $1/6[11\overline{2}]{111}$, have not been observed in the simulation because of room temperature cannot offer enough energy for dislocation nucleation.
 
 
 \begin{equation}\label{eq:dis1}
@@ -189,7 +189,7 @@ The velocity of a screw dislocation can be estimated by Escaig's elastic model \
 v = v_0 \exp(-\Delta H(\tau^*)/kT)
 \end{equation}
 
-where the prefactor $v_0$ gives the velocity that would be obtained for each potential mobility, $L$ is the free length of screw character of dislocation, $\Delta H(\tau^*)$ is activation enthalpy determined by loading conditions. The effect of temperature on the mobility can be obtained under different loading conditions, thus  $\Delta H(\tau^*)$ are different. We choose cases with different loading condition$\Delta H(\tau^*)$  , normalized velocity can be  case 1 to case 3  in a increse order of $\Delta H(\tau^*)$. t
+where the pre factor $v_0$ gives the velocity that would be obtained for each potential mobility, $L$ is the free length of screw character of dislocation, $\Delta H(\tau^*)$ is activation enthalpy determined by loading conditions. The effect of temperature on the mobility can be obtained under different loading conditions, thus  $\Delta H(\tau^*)$ are different. We choose cases with different loading condition$\Delta H(\tau^*)$  , normalized velocity can be  case 1 to case 3  in a increase order of $\Delta H(\tau^*)$. 
 
 
 The orientation of slip is changed because the crystallographically available slip and directions are not continuous across the interface. This may significantly reduce the Schmid factor and thus impede slip transfer. At the $\gamma/\gamma$ interfaces the orientation of the slip plan could change through a relevantly large angle of about 90 degree. Reorientation of slip is always required at the $\alpha_{2}/\gamma$ interface; the smallest angle between the corresponding slip planes ${1 1 1}_{\gamma}$ and ${ 1 0 -1 0}_{\alpha_2}$ is about 19 degree \cite{}. From Fig. \ref{fig:Defect}, of the two constituents of ($\alpha_2$+$\gamma$) alloys, the $\alpha_2$ phase is more difficult to deform. A reason for the unequal strain partitioning between the $\alpha_2$ and $\gamma$ phase is certainly the strong plastic anisotropy of the $\alpha_2$ phase. TEM examinations performed on tensile tested lamellar alloys have revealed that the limited plasticity of the $\alpha_2$ phase is mainly carried by local slip of [a]-type dislocations with the Burgers vector $b=1/3[11\overline{2}0]$ prism planes\ref{fig:Defect}, which is by far the easiest slip system in $\alpha_2$ single crystals. 
@@ -232,7 +232,7 @@ The orientation of slip is changed because the crystallographically available sl
 	
 The core of a dislocation intersecting an interface often needs to be transformed. For example, an ordinary 1/2[110] dislocation gliding in one $\gamma$ grain has to be converted in to a $[101]$ super dislocation with the double Burgers vector gliding in an adjacent $\gamma$ grain. At the $\alpha_2/\gamma$ interface the dislocations existing in the $D0_{19}$ structure have to be transformed into dislocations consistent with the $L1_0$structure. These core transformations are associated with a change of the dislocation line energy because the lengths of the Burgers vectors and the shear module are different.
 
-Dislocations crossing semi-coherent boundaries have to intersect the misfit dislocations, a process that involves elastic interaction, jog formation and the incorporation of gliding dislocations into the mismatch structure of the interface.When the slip is forced to cross $\alpha_2$ lamealla, pyramidal slip of the $\alpha_2$ phase is required, which needs an extremely high shear stress.
+Dislocations crossing semi-coherent boundaries have to intersect the misfit dislocations, a process that involves elastic interaction, jog formation and the incorporation of gliding dislocations into the mismatch structure of the interface.When the slip is forced to cross $\alpha_2$ lamella, pyramidal slip of the $\alpha_2$ phase is required, which needs an extremely high shear stress.
 
 
 \subsection{The effect of void on the strength of material}
@@ -245,7 +245,7 @@ Dislocations crossing semi-coherent boundaries have to intersect the misfit disl
 \end{figure}
 
 
-Void of R=10 \AA\ was placed at phase boundary, inside $\alpha_2$ phase grain respectively. Effect of void at different position under uniaxial tension is shown in Fig.\ref{fig:stress&strain}. The strength of materails with void in different size and at different position is shown in Fig.\ref{fig:stress&strain}. The results show that the model without void defect has best strength, while the void located inside $\alpha_2$ phase detracts the strength of the material most, and the void at phase boundary have less impact on the strength.
+Void of R=10 \AA\ was placed at phase boundary, inside $\alpha_2$ phase grain respectively. Effect of void at different position under uniaxial tension is shown in Fig.\ref{fig:stress&strain}. The strength of materials with void in different size and at different position is shown in Fig.\ref{fig:stress&strain}. The results show that the model without void defect has best strength, while the void located inside $\alpha_2$ phase detracts the strength of the material most, and the void at phase boundary have less impact on the strength.
            
 The effect of size is expectable that the greater voids detracts the strength of the materials more, however, it has been observed in the simulation that there is a critical value about 15A for voids at different position. The voids larger than 15 A have dramatic detraction to the strength of the material. Conventional definition of strength of materials with geometry subtraction was applied to the model, and theoretical strength of the models was calculated by formulation \ref{eq:section}:
 	
@@ -253,7 +253,7 @@ The effect of size is expectable that the greater voids detracts the strength of
 	\sigma^* = \sigma_0 \cdot \frac{A^*}{A_0}
 	\end{equation}
 	
-where $\sigma_0$ is the strength of the model without void defects 5.26 Gpa, and $A_0$ is initial section area, $ A = 36000 {AA}^2$, $A^* $ is section area in consider of the subsection that results from the voids. Comparing with the strength determined by molecular dynamics simulation and the results calculated with formulation \ref{eq:section}, it can be assumed that the main factor that affects the strength of materials can be attributed to local behaviour of the materials, thus revolution of defects should be examined carefully.
+where $\sigma_0$ is the strength of the model without void defects 5.26 Gpa, and $A_0$ is initial section area, $ A = 36000 {AA}^2$, $A^* $ is section area in consider of the subsection that results from the voids. Comparing with the strength determined by molecular dynamics simulation and the results calculated with formulation \ref{eq:section}, it can be assumed that the main factor that affects the strength of materials can be attributed to local behavior of the materials, thus revolution of defects should be examined carefully.
 
 \begin{figure}[ht]
 	\centering
@@ -280,12 +280,12 @@ where $\sigma_0$ is the strength of the model without void defects 5.26 Gpa, and
 %	\label{fig:yield}
 %\end{figure}
 	
-Voids with different size: 2A, 5A, 10A, 15A were placed into the model respectively. It has been observed that voids detracts the strengths of the material. The max stress stress of the simulation cell decreases as the volume of voids are lareger. From Fig \ref{fig:stress&strain}, there is a critical value of void radius about 15A, the void greater than 15A cause serious detraction of strength of material. 
+Voids with different size: 2A, 5A, 10A, 15A were placed into the model respectively. It has been observed that voids detracts the strengths of the material. The max stress stress of the simulation cell decreases as the volume of voids are larger. From Fig \ref{fig:stress&strain}, there is a critical value of void radius about 15A, the void greater than 15A cause serious detraction of strength of material. 
 Engineering stress is calculated
 	$$ \sigma = S/A$$
-The rate of decrease of loading area are smaller comparing with the detraction of strength, so it can be assumed that the yield yield behavior and strength is much more related with local behaviour of grain boundaries and void.
+The rate of decrease of loading area are smaller comparing with the detraction of strength, so it can be assumed that the yield yield behavior and strength is much more related with local behavior of grain boundaries and void.
 	
-Grain and phase boundaris are obstancles to deformation process, thus the stability of boundaries have great impact on the strength of materials. Interactive between grainboundary and void determins the fracture mode of the TiAl alloy.
+Grain and phase boundaries are obstacles to deformation process, thus the stability of boundaries have great impact on the strength of materials. Interactive between grain boundary and void determines the fracture mode of the TiAl alloy.
 
 \subsection{Evolution of spherical void in the simulation with intragranular spherical voids}
 
@@ -302,11 +302,11 @@ The role of void can be concluded as two main parts: source of dislocation and o
 \tau_0 = Gb/d
 \end{equation}
 
-where d represents the distance between A and B and thus reflects the dependence of the critical shear stress $\tau_0$ on the second-phase particle density and distribution. This mechanism for hardening is designated as the Orowan process (with $\tau_0$ as the Orowan (shear) stress. As a result of the Orowan process, upon passage of the pinning points by a series of gliding dislocations, a system of concentric loops is formed around the second-phase particles. Consequently, the effective average distance between the second-phase particles has decreased to d which implies a necessary increase of the value of critical shear stress required for continuation of dislocation glide. The width of a burgers vector, will be generated at both sidesof a crystal along the direction of the burgers vector after dislocation traversing the entire crystal, as is shown in \ref{fig:orowan}. A small tep will be formed at spherical void surface toward the void interiorafter dislocation absorption at spherical void surfaces. If a great number of dislocation slip along their respective systemstowards the spherical nano void in all directions, and are absorbed at spherical void surfaces, the spherical nano void will eventually shrink from the dash circle 
+where d represents the distance between A and B and thus reflects the dependence of the critical shear stress $\tau_0$ on the second-phase particle density and distribution. This mechanism for hardening is designated as the Orowan process (with $\tau_0$ as the Orowan (shear) stress. As a result of the Orowan process, upon passage of the pinning points by a series of gliding dislocations, a system of concentric loops is formed around the second-phase particles. Consequently, the effective average distance between the second-phase particles has decreased to d which implies a necessary increase of the value of critical shear stress required for continuation of dislocation glide. The width of a burgers vector, will be generated at both sides of a crystal along the direction of the burgers vector after dislocation traversing the entire crystal, as is shown in \ref{fig:orowan}. A small tep will be formed at spherical void surface toward the void interior after dislocation absorption at spherical void surfaces. If a great number of dislocation slip along their respective systems towards the spherical nanovoid in all directions, and are absorbed at spherical void surfaces, the spherical nanovoid will eventually shrink from the dash circle 
 \section{conclusion}
 In this paper, deformation behavior of two phase TiAl alloy under tensile loading was simulated with MD method. The mechanism of deformation was investigated under atomic scale, and the effect of void defect on the properties of two phase TiAl alloy was also studied.  The conclusions are as follows:
 
-(1) The major deformation component of the two phase TiAl alloy is $\gamma$ phase,$\alpha$ phase is harder to be deformed, this inhomogene results in cracks at interface of the two phase. 
+(1) The major deformation component of the two phase TiAl alloy is $\gamma$ phase,$\alpha$ phase is harder to be deformed, this inhomogeneity results in cracks at interface of the two phase. 
 
 (2) The effect of the void defect on the strength of the two phase alloy is sensitive to the location of the void. The void located inside the grain decrease the strength to the material because this type defect weaken the grain thus caused even more serious stress concentration, and the void at phase boundary have less impact on the strength of the material because this type void help to release of local stress at grain boundary.
 
